--- a/particle_dark/assets/css/custom/colors.css
+++ b/particle_dark/assets/css/custom/colors.css
@@ -72,7 +72,7 @@ footer p a:hover,
 }
 
 /* secondary color */
-.our-work-section .new-style p a, #our-work > div > div > div.col-md-12.portfolio-images > div > div.portfolio-img > div.sweep-from-center > div > div > a, #our-work > div > div > div.col-md-12.portfolio-images > div > div.portfolio-img > div.sweep-from-center > div > div > h3 > a:hover, #about > div > div > div > div.about-text > h3 > span {
+.our-work-section .new-style p a, #our-work > div > div > div.col-md-12.portfolio-images > div > div.portfolio-img > div.sweep-from-center > div > div > a, #our-work > div > div > div.col-md-12.portfolio-images > div > div.portfolio-img > div.sweep-from-center > div > div > h3 > a:hover, #about > div > div > div > div.about-text > h3 > span, #about2 > div > div > div > div.about-text > h3 > span, #about3 > div > div > div > div.about-text > h3 > span {
     color: #ff701b;
 }
 
@@ -80,7 +80,7 @@ footer p a:hover,
     color: #00F2FF;
 }
 
-#our-work > div > div > div.col-md-12.new-style > p, #our-work > div > div > div.col-md-12.portfolio-images > div > div.portfolio-img > div.sweep-from-center > div > div > p, #service-details > div > div > div.col-md-12.service-content > div.right > div > div.text > h4 {
+#our-work > div > div > div.col-md-12.new-style > p, #our-work > div > div > div.col-md-12.portfolio-images > div > div.portfolio-img > div.sweep-from-center > div > div > p, #service-details > div > div > div.col-md-12.service-content > div.right > div > div.text > h4, #about > div > div > div > div > h3, #about2 > div > div > div > div > h3, #about3 > div > div > div > div > h3 {
     color: white;
 }
 
