--- a/particle_dark/assets/css/custom/theme.css
+++ b/particle_dark/assets/css/custom/theme.css
@@ -3478,7 +3478,7 @@ body > section.portfolio-item > div.container-fluid > div > div > div > div.cont
 }
 
 #services-attente {
-    height: 75em;
+    height: 53em;
 }
 
 #services-attente > div > div > div.col-md-12.service-content > div {
@@ -3538,12 +3538,16 @@ body > section.portfolio-item > div.container-fluid > div > div > div > div.cont
     margin-top: 0;
 }
 
+#portfolio-details-file > div > div > div > h2, #portfolio-details-file > div > div > div > h3 {
+    text-align: center;
+}
 
-#wedo > div > div > div > div > h3, #about > div > div > div > div.about-text > h3 > span, #about2 > div > div > div > div.about-text > h3 > span, #about3 > div > div > div > div.about-text > h3 > span, #quote > div.container-fluid > div > div.col-md-12.quote-headline > h4, #services > div > div.col-lg-12.service-content > div > div > p > span, #services > div > div > p.wow.fadeIn.animated, #services > div > div > p, #our-work > div > div > div.col-md-12.portfolio-images > div > div.portfolio-img > div.sweep-from-center > div > div > h3 > a, #contact > div > div > div > div.contact-content > div.contact-info > p, #contact > div > div > div > div.contact-content > div.contact-form > h4, #services-attente > div > div > div.col-md-12.service-headline > h2, #portfolio-details > div > div > div > h4 {
+
+#wedo > div > div > div > div > h3, #about > div > div > div > div.about-text > h3 > span, #about2 > div > div > div > div.about-text > h3 > span, #about3 > div > div > div > div.about-text > h3 > span, #quote > div.container-fluid > div > div.col-md-12.quote-headline > h4, #services > div > div.col-lg-12.service-content > div > div > p > span, #services > div > div > p.wow.fadeIn.animated, #services > div > div > p, #our-work > div > div > div.col-md-12.portfolio-images > div > div.portfolio-img > div.sweep-from-center > div > div > h3 > a, #contact > div > div > div > div.contact-content > div.contact-info > p, #contact > div > div > div > div.contact-content > div.contact-form > h4, #services-attente > div > div > div.col-md-12.service-headline > h2, #portfolio-details > div > div > div > h4, #portfolio-details-file > div > div > div > h3 {
     font-size: 30px !important;
 }
 
-#our-work > div > div > div.col-md-12.see-work > h2, #about > div > div > div > div.about-text > h2, #about2 > div > div > div > div.about-text > h2, #about3 > div > div > div > div.about-text > h2, #services > div > div > div.col-md-12.service-headline > h2, #services > div > div:nth-child(1) > h2, #call-to > div.container > div > div > h3, #skills > div > div > div > div > h2, #contact > div > div > div > div.contact-headline > h3 > span, #page-top > section.service-item > div.container-fluid > div > div > div.typed-headline > span.skilltechtypetext, #about > div > div > div > div > h3 > span.minutes, #about2 > div > div > div > div > h3 > span.minutes, #wedo > div > div > div > div > h2 {
+#our-work > div > div > div.col-md-12.see-work > h2, #about > div > div > div > div.about-text > h2, #about2 > div > div > div > div.about-text > h2, #about3 > div > div > div > div.about-text > h2, #services > div > div > div.col-md-12.service-headline > h2, #services > div > div:nth-child(1) > h2, #call-to > div.container > div > div > h3, #skills > div > div > div > div > h2, #contact > div > div > div > div.contact-headline > h3 > span, #page-top > section.service-item > div.container-fluid > div > div > div.typed-headline > span.skilltechtypetext, #about > div > div > div > div > h3 > span.minutes, #about2 > div > div > div > div > h3 > span.minutes, #wedo > div > div > div > div > h2, #portfolio-details-file > div > div > div > h2 {
     font-size: 50px !important;
 }
 
@@ -3605,7 +3609,7 @@ body > section.portfolio-item > div.container-fluid > div > div > div > div.cont
         font-size: 36px;
     }
     #services-attente {
-        height: 165em;
+        height: 142em;
     }
     #services-attente > div > div > div.col-md-12.service-content > div {
         width: 100%;
@@ -3645,6 +3649,9 @@ body > section.portfolio-item > div.container-fluid > div > div > div > div.cont
     }
     #services > div > div.service-2.wow.fadeIn.animated > div > div:nth-child(4) > div.col-sm-4 > div > p, #services > div > div.service-2.wow.fadeIn.animated > div > div:nth-child(6) > div.col-sm-4 > div > p {
         width: unset;
+    }
+    .filedattente {
+        height: 55em;
     }
 }
 
@@ -3689,9 +3696,6 @@ body > section.portfolio-item > div.container-fluid > div > div > div > div.cont
     #wedo {
         height: 48em;
     }
-    #services-attente {
-        height: 180em;
-    }
 }
 
 @media only screen and (max-width: 698px) {
@@ -3733,6 +3737,9 @@ body > section.portfolio-item > div.container-fluid > div > div > div > div.cont
     #our-work > div > div > div.col-md-12.portfolio-images > div > div.portfolio-img {
         display: none;
     }
+    .filedattente {
+        height: 60em;
+    }
 }
 
 @media only screen and (max-width: 536px) {
@@ -3769,11 +3776,11 @@ body > section.portfolio-item > div.container-fluid > div > div > div > div.cont
     #wedo {
         height: 52em;
     }
-    #services-attente {
-        height: 190em;
-    }
     #about2 {
         height: 45em;
+    }
+    .filedattente {
+        height: 68em;
     }
 }
 
@@ -3797,7 +3804,7 @@ body > section.portfolio-item > div.container-fluid > div > div > div > div.cont
         width: 100% !important;
     }
     .filedattente {
-        height: 55em;
+        height: 80em;
     }
     #about {
         height: 60em;
@@ -3843,7 +3850,7 @@ body > section.portfolio-item > div.container-fluid > div > div > div > div.cont
         line-height: 3em;
     }
     .filedattente {
-        height: 60em;
+        height: 95em;
     }
     #wedo {
         height: 62em;
@@ -3854,6 +3861,9 @@ body > section.portfolio-item > div.container-fluid > div > div > div > div.cont
     }
     #skills {
         height: 80em;
+    }
+    #contact > div > div > div > div.contact-content > div.contact-info {
+        height: 45em;
     }
 }
 
@@ -3871,7 +3881,7 @@ body > section.portfolio-item > div.container-fluid > div > div > div > div.cont
         padding-top: 9em;
     }
     .filedattente {
-        height: 70em;
+        height: 105em;
     }
     #offres-alt {
         height: 38em;
@@ -3884,7 +3894,7 @@ body > section.portfolio-item > div.container-fluid > div > div > div > div.cont
         height: 7em;
     }
     .filedattente {
-        height: 75em;
+        height: 110em;
     }
     #wedo {
         height: 68em;
@@ -3895,6 +3905,9 @@ body > section.portfolio-item > div.container-fluid > div > div > div > div.cont
     #offres-alt {
         height: 42em;
         padding-top: 28em;
+    }
+    #portfolio-details-file > div > div > div > h2 {
+        font-size: 40px !important;
     }
 }
 
