--- a/particle_dark/assets/css/custom/theme.css
+++ b/particle_dark/assets/css/custom/theme.css
@@ -1843,7 +1843,7 @@ footer p a {
     height: 100%;
     width: 100%;
     margin-top: -100px;
-    background: url('../../images/carto.jpg') fixed;
+    background: url('../../images/montage_carto.png') fixed;
     background-size: cover;
     position: relative;
 }
@@ -3835,7 +3835,7 @@ body > section.portfolio-item > div.container-fluid > div > div > div > div.cont
     }
     #about2 {
         height: 55em;
-    } 
+    }
 }
 
 @media only screen and (max-width: 370px) {
