fusion en 4 forces au lieu de 6

--- a/particle_dark/assets/css/custom/theme.css
+++ b/particle_dark/assets/css/custom/theme.css
@@ -3532,6 +3532,7 @@ body > section.portfolio-item > div.container-fluid > div > div > div > div.cont
 
 #three-points {
     height: auto;
+    background: black;
 }
 
 #three-points > div > div > div > div {
